# tr-dbt-dimensional

./: .dockerignore  .env.example  .env.template  .gitignore  .user.yml  Makefile  README.md  cat-files.txt  create_hello_world.py  docker-compose.dev.yml  docker-compose.yml  file-describe.txt  file_describe.txt  file_describe_all_files.txt  hello_world.py  hello_world.sql  hello_world_ingestion.py  lark_data_pipeline.md  main.py  memo.ipynb  memo.md  output.txt  pyproject.toml  requirements.txt  superset_config.py  test.ipynb  test.py  test_marimo.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  superset.Dockerfile  supervisord.conf
adventureworks/: profiles.yml  view.ipynb
backup/: Dockerfile  devcontainer.json  docker-compose.yml
data/csvs_demo/: README.md
docker/app/: Dockerfile
docker/metabase/: Dockerfile
docs/dbt_modeling/: modeling.md
docs/docker/: superset_init.md
docs/ingestion/: csv_to_db_information.md  playwright.md
docs/study/: jissenteki.md
ingestion/: csv_to_db.py  output.txt  playwright_sample.py  utils.py  utils_bak.py
ingestion/api-request/: api_request.py
ingestion/config/: tables.yml
ingestion/db_ingestion/: csv_to_db.py  utils.py
ingestion/fetchers/: sample_fetch.py  utils.py
ingestion/pipelines/: clean_landing.py  csv_to_db.py  ingest_flow.py  replay.py
ingestion/pipelines_bak/: csv_to_db.py  land_import.py  promote.py  validate.py
note/: dbt_guide.md
profiles/: .user.yml  profiles.yml
raw_data/sales_order_detail/: sales_order_detail01.csv  (+3 more)
superset/: Dockerfile.superset  superset_config.py
(+40 files in other folders)
