[project]
name = "tr-dbt-dimensional"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "db>=0.1.1",
    "dbt-core>=1.10.4",
    "dbt-duckdb>=1.9.4",
    "duckdb>=1.3.2",
    "jupyter>=1.1.1",
    "pandas>=2.3.1",
    "pyarrow>=20.0.0",
    "sqlfluff>=3.4.2",
    "sqlfluff-templater-dbt>=3.4.2",
]
