[project]
name = "tr-dbt-dimensional"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "db>=0.1.1",
    "dbt-core>=1.10.4",
    "dbt-duckdb>=1.9.4",
    "dbt-postgres>=1.10.0",
    "duckdb>=1.3.2",
    "marimo>=0.19.9",
    "pandas>=2.3.1",
    "playwright>=1.58.0",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=20.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "pyzmq>=27.1.0",
    "requests>=2.32.5",
    "ruff>=0.15.0",
    "sqlalchemy>=2.0.46",
    "sqlfluff>=3.4.2",
    "sqlfluff-templater-dbt>=3.4.2",
    "sqlglot>=28.10.0",
]

[tool.ruff]
line-length = 88
